--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
         "google/apiclient": "2.15",
-        "phpmailer/phpmailer": "*"
+        "phpmailer/phpmailer": "^7.0"
     }
 }
